feat(bootstrap): redesign Lambda to use native API and tagged resources
- Use native AWS API calls instead of Terraform destroy
- Destroy only resources tagged with Autodestroy

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
+# Lambda zip artifacts
+bootstrap/lambda-destroyer/*.zip
+
 # Sensitive variable files
 *.auto.tfvars
 terraform.tfvars
