--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -3,3 +3,6 @@ environment   = "dev"
 project_name  = "ade"
 instance_type = "t3.micro"
 vpc_cidr      = "10.0.0.0/16"
+
+cloudflare_api_token = "your_cloudflare_api_token_here"
+cloudflare_zone_id   = "your_cloudflare_zone_id"
