--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,8 +1,10 @@
-aws_region    = "eu-central-1"
-environment   = "dev"
-project_name  = "ade"
-instance_type = "t3.micro"
-vpc_cidr      = "10.0.0.0/16"
+aws_region   = "eu-central-1"
+environment  = "dev"
+project_name = "ade"
+vpc_cidr     = "10.0.0.0/16"
+
+# Set to true to enable NAT Gateway for private subnet internet access (+$1/day cost)
+create_nat_gateway = false
 
 cloudflare_api_token = "your_cloudflare_api_token_here"
 cloudflare_zone_id   = "your_cloudflare_zone_id"
